# AgenticMemoryProject

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
data/processed/: baseline_dummy.json
data/raw/: baseline_dummy.json  multihop_benchmark.json
docs/: vecgraph_flow.md  vector_rag.md
scripts/: prepare_hotpotqa.py
src/: __init__.py
src/agent/: __init__.py  agent_bm25.py  agent_dummy.py  agent_graph.py  agent_lightrag.py  agent_vecgraph.py  agent_vector.py  base.py  factory.py
src/config/: __init__.py  settings.py  unified_config.yaml
src/memory/: __init__.py  base.py  model_bm25.py  model_dummy.py  model_graph.py  model_lightrag.py  model_vecgraph.py  model_vector.py
src/memory/storage/: __init__.py  base.py  filesystem.py
src/pipelines/: ingest.py  qa.py
src/telemetry/: __init__.py  tracker.py
tests/: conftest.py
tests/integration/: test_dummy_agent_graph.py  test_dummy_agent_tracked.py  test_tracker_real_call.py
tests/unit/: test_bm25_memory.py  test_config_loader.py  test_dummy_agent.py  test_dummy_memory.py  test_graph_memory.py  test_lightrag_memory.py  test_telemetry_tracker.py  test_vecgraph_memory.py  test_vector_memory.py
