[project]
name = "agenticmemoryproject"
version = "0.1.0"
description = "Scientific benchmarking framework: Vector RAG vs GraphRAG token efficiency"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "litellm>=1.82,<2",
    "langgraph>=1.1,<2",
    "langchain-core>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires live LLM endpoints (deselect with -m 'not integration')",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0.0",
]
