[project]
name = "agenticmemoryproject"
version = "0.1.0"
description = "Scientific benchmarking framework: Vector RAG vs GraphRAG token efficiency"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "litellm>=1.82,<2",
    "langgraph>=1.1,<2",
    "langchain-core>=1.0,<2",
]

[project.optional-dependencies]
# Installed inside the Docker app container (Linux wheels, no C++ required).
# Run via: uv sync --extra app  (see Dockerfile)
# Includes datasets so prepare_hotpotqa.py can run inside Docker too:
#   docker compose run --rm app python scripts/prepare_hotpotqa.py
app = [
    "chromadb-client>=0.6,<1",
    "datasets>=3.0,<4",
    # sentence-transformers is installed separately in Dockerfile
    # via the PyTorch CPU index to avoid ~2 GB of CUDA libraries.
]
# Local development: unit tests only (pure Python, no C++ deps).
# Run via: uv sync --extra dev
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires live LLM endpoints (deselect with -m 'not integration')",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0.0",
]
